# CLARK

./: CMakeLists.txt  README_FULL.md  buildSpacedDB.sh  classify_metagenome.sh  download_RefSeqDB.sh  estimate_abundance.sh  evaluate_density_confidence.sh  evaluate_density_gamma.sh  extractSequences.sh  getTargetsKmers_distribution.sh  install.sh  makeSummaryTables.sh  make_metadata.sh  set_targets.sh
src/: CLARK_s.hh  FileHandler.cc  FileHandlerA_s.cc  FileHandlerQ_s.cc  dataType_s.hh  file_s.cc  file_s.hh  kmersConversion.cc  main_s.cc
